# safe_placement

./: .gitignore  CMakeLists.txt  README.md  cartesian_twist_controller_plugin.xml  controllers_plugin.xml  package.xml  requirements.txt
assets/: empty_panda_world.xml  panda.xml  panda_fingertip_world.xml  panda_gripper_fingertip.xml  panda_gripper_myrmex.xml  panda_gripper_s.xml  panda_table_world.xml  panda_world.xml  panda_world_test_.xml  parameter_test_world.xml  picknplace_world.xml
assets/meshes/visual/: angled_mount.stl  myrmex_quick_mount.stl
assets/urdf/: fingertip.urdf.xacro  myrmex_quick_mount.urdf.xacro  panda_gripper_myrmex.urdf.xacro  panda_gripper_s.urdf  panda_gripper_s.urdf.xacro  poking_stick.urdf.xacro  tactile_surface.urdf.xacro
config/: camera_config.yaml  franka_hw_sim.yaml  initial_joint_states.yaml  joint_states.yaml  mujoco_plugins.yaml  mujoco_plugins_4x4.yaml  mujoco_plugins_fingertip.yaml  mujoco_plugins_moded_fingertips.yaml  parameter_test.yaml  sim_controllers.yaml
gym_safe_placement/: setup.py
gym_safe_placement/envs/: gym_env.py
gym_safe_placement/gym_safe_placement.egg-info/: PKG-INFO  SOURCES.txt
include/safe_placement/: cartesian_twist_controller.h  cartesian_velocity_impedance_controller.h  pseudo_inversion.h
launch/: display_rviz_panda.launch  display_rviz_panda_myrmex.launch  moveit_test.launch  panda.launch  panda_fingertip.launch  panda_myrmex.rviz  parameter_test.launch  test.launch
models/Tactile+Torques+EEorientation/: Policy_Model  Target_Model
models/TactileOnly/: Policy_Model  Target_Model
scripts/: DQN.py  PPO.py  continue_q.py  evaluate.py  evaluate2.py  gym_env.py  moveit_meta_actions.py  object_spawn.py  object_spawn_test.py  param_vis.py  parameval.py  q_learning.py  q_learning_new_curriculum.py  q_learning_reduced.py  q_learning_temp_conv.py  robot_model.py  test_env.py  test_network.py
src/: cartesian_twist_controller.cpp  cartesian_velocity_impedance_controller.cpp
tactile_object_placement/: __init__.py  setup.py
tactile_object_placement/envs/: __init__.py  tactile_placing_env.py  tactile_placing_env2.py
tactile_object_placement/tactile_object_placement.egg-info/: PKG-INFO  SOURCES.txt
