<?xml version="1.0"?>
<package format="2">
  <name>safe_placement</name>
  <version>0.0.0</version>
  <description>The safe_placement package</description>

  <maintainer email="marco.jimenez@uni-bielefeld.de">Marco Härtel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>eigen</build_depend>
  
  <depend>message_generation</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_gripper</depend>
  <depend>franka_example_controllers</depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/cartesian_twist_controller_plugin.xml"/>
</export>
</package>
